TOPBAR: temp fix for navbar on smaller vp

--- a/topbar/assets/css/style.scss
+++ b/topbar/assets/css/style.scss
@@ -114,6 +114,10 @@ body{
 				width: 100%;
 			}
 
+			@media (max-width: 768px){
+				display: none;
+			}
+
 			.nav-inner{
 				width: 50%;
 				float: left;
